# cry_more

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: main.cpp
src/includes/: sum.cpp  sum.h
